--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,8 +19,8 @@ body {
 
 .container.landing-page {
 	margin: 0;
-	padding: 0;
-	height:100%;
+	padding: 50px;
+
 	width:100%;
 	margin-left: auto;
 	margin-right: auto;
